Realigned projects in projects file. TODO: Improve vertical spacing in projects file and fix slow framerate on contact.html and about.html

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ body {
 		font-weight: 300;
     overflow-x: hidden;
 		/*background: #007180; /* Old browsers */
-/*background: -moz-linear-gradient(top,  #007180 0%, #cbddc8 100%); /* FF3.6+ */
-/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#007180), color-stop(100%,#cbddc8)); /* Chrome,Safari4+ */
-/*background: -webkit-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* Chrome10+,Safari5.1+ */
-/*background: -o-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* Opera 11.10+ */
-/*background: -ms-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* IE10+ */
+background: -moz-linear-gradient(top,  #007180 0%, #cbddc8 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#007180), color-stop(100%,#cbddc8)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #007180 0%,#cbddc8 100%); /* IE10+ */
 background: linear-gradient(to bottom,  #ffffff 0%,#098989 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007180', endColorstr='#cbddc8',GradientType=0 ); /* IE6-9 */
 font-family: "Segoe UI Light", "Ubuntu", "Helvetica Neue Ultralight", "Calibri Light";
@@ -659,6 +659,10 @@ a:hover, a:active, a:focus {
    Footer section
 -----------------------------------------*/
 
+footer p{
+	color: #fff;
+}
+
 footer {
     background: #000;
     color: #ffffff;
@@ -679,6 +683,7 @@ footer hr {
 
 footer .footer-copyright {
   padding-top: 12px;
+	color: #ffffff;
 }
 
 
